[project]
name = "release-desk-openenv"
version = "0.1.0"
description = "Deterministic OpenEnv environment for enterprise document sanitization and release review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openai",
  "openenv-core>=0.2.0",
  "pytest",
  "python-dotenv",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
